--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 	<title>Module 3 Solution</title>
 
-	<link rel="stylesheet" href="h3w.css">
+	 <link rel="stylesheet" href="h3w.css" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
